<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white_tr">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"

            android:hint="@string/auth_email_label"

            app:placeholderText="@string/email_example_hint"
            app:expandedHintEnabled="false"

            android:textColorHint="@color/black"
            app:placeholderTextColor="@color/gray"
            app:boxStrokeColor="@color/black"
            app:endIconTint="@color/black"
            app:helperTextTextColor="@color/error_red"
            app:hintTextColor="@color/black"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/gray"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"

            android:hint="@string/password_label"

            app:endIconMode="password_toggle"
            app:expandedHintEnabled="false"

            android:textColorHint="@color/black"
            app:placeholderTextColor="@color/gray"
            app:boxStrokeColor="@color/black"
            app:endIconTint="@color/black"
            app:helperTextTextColor="@color/error_red"
            app:hintTextColor="@color/black"
            app:startIconTint="@color/black"

            app:placeholderText="@string/enter_password_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/gray"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/have_an_account"
            android:textColor="@color/black"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>